csrc/tests/codegen_probes/errors/err_ubound_dim_oor.bas
' REJECT: UBOUND with a constant dimension index out of range.
' zxbparser ~3361 "Dimension out of range".
Dim a(3) As Byte
Print uBound(a, 9)
